--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,14 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js", 
+    "server": "nodemon server.js",
     "start": "node server.js"
   },
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.18.0"
   },
   "devDependencies": {
