--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "cra-template-redux": "2.0.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0",
-    "react-router": "^7.8.2",
-    "react-router-dom": "^7.8.2",
-    "react-scripts": "5.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^5.1.0"
   },
   "scripts": {
