--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
   "name": "mern_goalsapp",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "MERN Goals App",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
+    "server": "nodemon server/server.js",
+    "client": "npm start --prefix client",
+    "client-install": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd server && npm start",
-    "client": "cd client && npm start"
+    "build": "npm run build --prefix client",
+    "render-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ajithnellikottkrishnadas/Goal-app-MERN.git"
-    
   },
   "keywords": [],
-  "author": "",
+  "author": "Ajith",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/ajithnellikottkrishnadas/Goal-app-MERN/issues"
   },
   "homepage": "https://github.com/ajithnellikottkrishnadas/Goal-app-MERN#readme",
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.0"
   }
 }
